Closed Bug 205523 Opened 22 years ago Closed 22 years ago

`java_wrapper_obj' might be used uninitialized in jsj_WrapJSObject

Categories

(Core Graveyard :: Java: Live Connect, defect)

x86
Linux
defect
Not set
trivial

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: timeless, Assigned: timeless)

References

Details

Attachments

(1 file)

js/src/liveconnect/jsj_JSObject.c:253 (See build log excerpt) `java_wrapper_obj' might be used uninitialized in this function jsj_WrapJSObject(JSContext *cx, JNIEnv *jEnv, JSObject *js_obj)
Attached patch fixSplinter Review
Attachment #123146 - Flags: review?(beard)
*** Bug 205028 has been marked as a duplicate of this bug. ***
Attachment #123146 - Flags: superreview?(dmose)
Attachment #123146 - Flags: superreview?(dmose) → superreview+
Attachment #123146 - Flags: review?(beard) → review+
checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Checkin verified -
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: