Bug 205523 `java_wrapper_obj' might be used uninitialized in jsj_WrapJSObject r=beard sr=dmose